<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home2"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_prudutos"
            android:title="@string/menu_produtos"/>
        <item
            android:id="@+id/nav_solicitacao"
            android:icon="@drawable/ic_menu_solicitacoes"
            android:title="@string/menu_solicitacao"/>

        <item
            android:id="@+id/nav_acompanhamento"
            android:icon="@drawable/ic_menu_acompanhamento"
            android:title="@string/menu_acompanhamento"/>

        <item
            android:id="@+id/nav_atendimento"
            android:icon="@drawable/ic_menu_atendimento"
            android:title="@string/menu_atendimento"/>

    </group>

    <item
        android:title="@string/menu_informacao">

          <menu>

            <item
              android:id="@+id/nav_sobre"
              android:icon="@drawable/ic_menu_sobre2"
              android:title="@string/menu_sobre"/>

             <item
              android:id="@+id/nav_conosco"
              android:icon="@drawable/ic_menu_atendimento"
              android:title="@string/menu_conosco"/>

           </menu>

    </item>



</menu>
